--- a/bankapp2/src/main/resources/templates/admin-dashboard.html
+++ b/bankapp2/src/main/resources/templates/admin-dashboard.html
@@ -11,6 +11,8 @@
     <a href="/admin/users">View Users</a>
     <a href="/admin/addUser1">Create User</a>
     <a href="/admin/updatePassword1">Change password</a>
+    <a href="/">Back to Main Menu</a>
+
     <!-- Add other navigation links as needed -->
 </nav>
 </div>
