--- a/bankapp2/src/main/resources/templates/user-signup.html
+++ b/bankapp2/src/main/resources/templates/user-signup.html
@@ -23,6 +23,6 @@
     <a href="/">Back to Main Menu</a>
   </div>
 </form>
-<p class="error-message" th:if="${signupError}" class="error-message" th:text="${signupError}"></p></div>
+<p class="error-message" th:if="${signupError}" th:text="${signupError}"></p></div>
 </body>
 </html>
