--- a/bankapp2/src/main/resources/templates/deposit.html
+++ b/bankapp2/src/main/resources/templates/deposit.html
@@ -9,7 +9,7 @@
 <h1>Deposit Funds</h1>
 <form th:action="@{/users/deposit}" method="post">
     <label for="amount">Amount:</label>
-    <input type="number" id="amount" name="amount" required min="0.01" step="1">
+    <input type="number" id="amount" name="amount">
     <button type="submit">Deposit</button>
 </form>
 <a href="/users/dashboard">Back to Dashboard</a>
