--- a/bankapp2/src/main/resources/templates/transfer.html
+++ b/bankapp2/src/main/resources/templates/transfer.html
@@ -20,7 +20,7 @@
     </div>
     <div>
         <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" required min="1" step="0.01" onchange="showPasswordField()">
+        <input type="number" id="amount" name="amount" onchange="showPasswordField()">
     </div>
     <div id="passwordSection" style="display:none;">
         <label for="password">Password:</label>
