--- a/bankapp2/src/main/resources/templates/withdraw.html
+++ b/bankapp2/src/main/resources/templates/withdraw.html
@@ -10,7 +10,7 @@
 <form th:action="@{/users/withdraw}" method="post">
     <div>
         <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" required min="1" step="0.01">
+        <input type="number" id="amount" name="amount">
     </div>
     <div>
         <label for="password">Password:</label>
