Switch to jdk 17

--- a/bankapp2/src/main/resources/templates/admin-login.html
+++ b/bankapp2/src/main/resources/templates/admin-login.html
@@ -23,7 +23,7 @@
         <a href="/">Back to Main Menu</a>
     </div>
 </form>
-<div th:if="${loginError}" th:text="${loginError}"></div>
+<div class="error-message" th:if="${loginError}" th:text="${loginError}"></div>
 </div>
 </body>
 </html>
