Added transaction history

--- a/bankapp2/src/main/resources/templates/user-dashboard.html
+++ b/bankapp2/src/main/resources/templates/user-dashboard.html
@@ -33,6 +33,7 @@
         <nav>
             <ul>
                 <li><a href="/users/deposit">Deposit Funds</a></li>
+                <li><a href="/users/log">History</a></li>
                 <li><a href="/users/withdraw">Withdraw Funds</a></li>
                 <li><a href="/users/transfer">Transfer Funds</a></li>
                 <li><a href="#" onclick="showEditPasswordForm()">Edit Password</a></li>
