didn't fix anythings

--- a/bankapp2/src/main/resources/templates/user-log.html
+++ b/bankapp2/src/main/resources/templates/user-log.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>User Log</title>
+    <title>Transaction History</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background: linear-gradient(to bottom, #0099cc, #0033cc);
-            animation: backgroundAnimation 10s linear infinite alternate;
+            animation: backgroundAnimation 5s linear infinite alternate;
         }
 
         @keyframes backgroundAnimation {
